--- a/index.html
+++ b/index.html
@@ -108,14 +108,8 @@ Website: <a href='https://www.porsche.com/singapore/en/aboutporsche/porsche-stud
                 </a>
               </td>
               <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Ducktours','Details...',1.2962154639617258,103.85934515399204)">
-                  Ducktours
-                </a><br>
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Paulaner Brauhaus','Details...',1.2932590424506925,103.85828729632154)">
-                  Paulaner Brauhaus
-                </a>
+                <span class="text-porsche-red">Ducktours</span><br>
+                <span class="text-porsche-red">Paulaner Brauhaus</span>
               </td>
             </tr>
 
@@ -129,10 +123,7 @@ Website: <a href='https://static1.squarespace.com/static/60346f39404e83020b69078
                 </a>
               </td>
               <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Free Evening','Recommendations (Placeholder):<br>- Marina Bay Sands SkyPark<br>- Clarke Quay<br>- Gardens by the Bay<br>- Singapore Flyer',1.295,103.859)">
-                  Free
-                </a>
+                <span class="text-porsche-red">Free</span>
               </td>
             </tr>
 
@@ -145,10 +136,7 @@ Website: <a href='https://static1.squarespace.com/static/60346f39404e83020b69078
                 </a>
               </td>
               <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Free Evening','Recommendations (Placeholder):<br>...',1.295,103.859)">
-                  Free
-                </a>
+                <span class="text-porsche-red">Free</span>
               </td>
             </tr>
 
@@ -162,10 +150,7 @@ Website: <a href='https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu
                 </a>
               </td>
               <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Free Evening','Recommendations (Placeholder):<br>...',1.295,103.859)">
-                  Free
-                </a>
+                <span class="text-porsche-red">Free</span>
               </td>
             </tr>
           </tbody>
