--- a/index.html
+++ b/index.html
@@ -180,15 +180,13 @@ Website: <a href='https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu
       }).addTo(map);
 
       const locations = [
-        { name: 'Porsche Studio', lat: 1.2977277899551323, lng: 103.85767913865098, address: '...' },
-        { name: 'The Telegraph', lat: 1.2970114160891666, lng: 103.85749342515686, address: '...' },
-        { name: 'Paulaner Brauhaus', lat: 1.2932590424506925, lng: 103.85828729632154, address: '...' },
-        { name: 'Summer Folks', lat: 1.2971186735816227, lng: 103.85752559136573, address: '...' },
-        { name: 'So Do Fun', lat: 1.297474294314912, lng: 103.85725591166262, address: '...' },
-        { name: 'Umai', lat: 1.2971435986916304, lng: 103.85759234049799, address: '...' },
-        { name: 'Ducktours', lat: 1.2962154639617258, lng: 103.85934515399204, address: '...' },
-        { name: 'Xcape', lat: 1.301405839403904, lng: 103.85563053680983, address: '...' },
-        { name: 'Night Safari', lat: 1.4024067704741168, lng: 103.7883016542753, address: '...' }
+        { name: 'Porsche Studio', lat: 1.2977277899551323, lng: 103.85767913865098, adress: },
+        { name: 'The Telegraph', lat: 1.2970114160891666, lng: 103.85749342515686, address  },
+        { name: 'Paulaner Brauhaus', lat: 1.2932590424506925, lng: 103.85828729632154, address:  },
+        { name: 'Summer Folks', lat: 1.2971186735816227, lng: 103.85752559136573, address:  },
+        { name: 'So Do Fun', lat: 1.297474294314912, lng: 103.85725591166262, address:  },
+        { name: 'Umai', lat: 1.2971435986916304, lng: 103.85759234049799, address:  },
+        { name: 'Ducktours', lat: 1.2962154639617258, lng: 103.85934515399204, address:  }
       ];
 
       locations.forEach(loc => {
