--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            height: 60vh; /* Hero-Bereich kleiner, damit Tabelle sichtbar ist */
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .modal {
             display: none;
@@ -72,7 +76,7 @@
 </head>
 <body>
     <!-- Hero Section -->
-    <section class="section-bg h-screen flex items-center justify-center">
+    <section class="section-bg">
         <h1 class="text-5xl md:text-7xl font-bold text-center text-white">After Sales Conference II</h1>
     </section>
 
