--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-            height: 60vh; /* Hero-Bereich kleiner, damit Tabelle sichtbar ist */
+            height: auto;
+            min-height: 40vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 2rem 1rem;
         }
         .modal {
             display: none;
@@ -41,13 +43,17 @@
             margin: 5% auto;
             padding: 20px;
             border: 1px solid #B0B0B0;
-            width: 80%;
+            width: 90%;
             max-width: 500px;
             max-height: 70vh;
             overflow-y: auto;
             border-radius: 12px;
         }
-        #map { height: 500px; }
+        #map {
+            width: 100%;
+            height: 50vh;
+            min-height: 300px;
+        }
         table tr:nth-child(even) { background-color: #f2f2f2; }
         table tr:hover { background-color: #e0e0e0; }
         .divider-stripe {
@@ -77,7 +83,7 @@
 <body>
     <!-- Hero Section -->
     <section class="section-bg">
-        <h1 class="text-5xl md:text-7xl font-bold text-center text-white">After Sales Conference II</h1>
+        <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-7xl font-bold text-center text-white">After Sales Conference II</h1>
     </section>
 
     <div class="divider-stripe"></div>
@@ -86,20 +92,21 @@
     <section class="py-16 px-4">
       <h2 class="text-4xl font-bold text-center porsche-red mb-8">Dining and Team Event Schedule</h2>
       <div class="max-w-4xl mx-auto content-container">
-        <table class="w-full text-left border-collapse">
-          <thead>
-            <tr class="border-b border-porsche-silver">
-              <th class="py-4 px-6 text-porsche-silver">Day</th>
-              <th class="py-4 px-6 text-porsche-silver">Lunch</th>
-              <th class="py-4 px-6 text-porsche-silver">Dinner/Team Event</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="border-b border-porsche-silver">
-              <td class="py-4 px-6">Monday, 8th Sep</td>
-              <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Porsche Studio',`• Appetiser: Air Flown Mesclun Salad with Summer Fruits, Almonds, and Citrus Vinaigrette (V) (GF)
+        <div class="overflow-x-auto">
+          <table class="w-full text-left border-collapse">
+            <thead>
+              <tr class="border-b border-porsche-silver">
+                <th class="py-4 px-6 text-porsche-silver">Day</th>
+                <th class="py-4 px-6 text-porsche-silver">Lunch</th>
+                <th class="py-4 px-6 text-porsche-silver">Dinner/Team Event</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="border-b border-porsche-silver">
+                <td class="py-4 px-6">Monday, 8th Sep</td>
+                <td class="py-4 px-6">
+                  <a href="#" class="text-porsche-red hover:underline"
+                    onclick="showDetails('Porsche Studio',`• Appetiser: Air Flown Mesclun Salad with Summer Fruits, Almonds, and Citrus Vinaigrette (V) (GF)
 • Mains:
 • Pan Grilled Corn Fed Chicken Breast, Roasted Potatoes
 • Macaroni with Smoked Provolone Cheese, Mozzarella and Parmigiano Reggiano (V)
@@ -108,57 +115,58 @@
 • Beverage Package: Still water, Coffee or Tea (order from regular Cafe Carrera Menu)
 
 Website: <a href='https://www.porsche.com/singapore/en/aboutporsche/porsche-studio/cafe-carrera/' target='_blank'>https://www.porsche.com/singapore/en/aboutporsche/porsche-studio/cafe-carrera/</a>`,1.2977277899551323,103.85767913865098)">
-                  Porsche Studio
-                </a>
-              </td>
-              <td class="py-4 px-6">
-                <span class="text-porsche-red">Ducktours</span><br>
-                <span class="text-porsche-red">Paulaner Brauhaus</span>
-              </td>
-            </tr>
+                    Porsche Studio
+                  </a>
+                </td>
+                <td class="py-4 px-6">
+                  <span class="text-porsche-red">Ducktours</span><br>
+                  <span class="text-porsche-red">Paulaner Brauhaus</span>
+                </td>
+              </tr>
 
-            <tr class="border-b border-porsche-silver">
-              <td class="py-4 px-6">Tuesday, 9th Sep</td>
-              <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('The Telegraph',`Order from the regular menu<br>
+              <tr class="border-b border-porsche-silver">
+                <td class="py-4 px-6">Tuesday, 9th Sep</td>
+                <td class="py-4 px-6">
+                  <a href="#" class="text-porsche-red hover:underline"
+                    onclick="showDetails('The Telegraph',`Order from the regular menu<br>
 Website: <a href='https://static1.squarespace.com/static/60346f39404e83020b690786/t/684ce408c856351a7d370bc7/1749869591173/%28A4%29+Telegraph+Menu+2025+%28Updated+on+4+June%29.pdf' target='_blank'>https://static1.squarespace.com/static/60346f39404e83020b690786/t/684ce408c856351a7d370bc7/1749869591173/(A4)+Telegraph+Menu+2025+(Updated+on+4+June).pdf</a>`,1.2970114160891666,103.85749342515686)">
-                  The Telegraph
-                </a>
-              </td>
-              <td class="py-4 px-6">
-                <span class="text-porsche-red">Free</span>
-              </td>
-            </tr>
+                    The Telegraph
+                  </a>
+                </td>
+                <td class="py-4 px-6">
+                  <span class="text-porsche-red">Free</span>
+                </td>
+              </tr>
 
-            <tr class="border-b border-porsche-silver">
-              <td class="py-4 px-6">Wednesday, 10th Sep</td>
-              <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Summer Folks',`Summerfolks Menu<br><br>Main Course (choose one):<br>Linguine Aglio Olio with tiger prawns, bacon, chilli<br>Fried Buttermilk Chicken with kimchi slaw, melted cheddar, chilli mayo, nori fries<br>Fragrant Coconut Rice with egg, tempura fried halibut, ikan bilis, peanut, sambal<br>Cream Spinach with mash potato, herb jus (+5 dollars)<br>200g Striploin with sunny-side-up eggs, baby potato balls, spicy harissa sauce (+9 dollars)<br><br>Drink (1 per person, choose one):<br>Hot Long Black<br>Hot Café Latte<br>Iced Long Black<br>Iced Café Latte<br>Hot Fruit Basket Tea<br>Hot Ginger Lemon Tea<br>Iced Lemon Tea<br>Iced Honey Lemon<br>Iced Lychee Lemon Tea<br>Sea Salt Blue Lemonade<br>Lychee Mint Soda<br><br>Dessert:<br>1 slice of cake per person`,1.2971186735816227,103.85752559136573)">
-                  Summer Folks
-                </a>
-              </td>
-              <td class="py-4 px-6">
-                <span class="text-porsche-red">Free</span>
-              </td>
-            </tr>
+              <tr class="border-b border-porsche-silver">
+                <td class="py-4 px-6">Wednesday, 10th Sep</td>
+                <td class="py-4 px-6">
+                  <a href="#" class="text-porsche-red hover:underline"
+                    onclick="showDetails('Summer Folks',`Summerfolks Menu<br><br>Main Course (choose one):<br>Linguine Aglio Olio with tiger prawns, bacon, chilli<br>Fried Buttermilk Chicken with kimchi slaw, melted cheddar, chilli mayo, nori fries<br>Fragrant Coconut Rice with egg, tempura fried halibut, ikan bilis, peanut, sambal<br>Cream Spinach with mash potato, herb jus (+5 dollars)<br>200g Striploin with sunny-side-up eggs, baby potato balls, spicy harissa sauce (+9 dollars)<br><br>Drink (1 per person, choose one):<br>Hot Long Black<br>Hot Café Latte<br>Iced Long Black<br>Iced Café Latte<br>Hot Fruit Basket Tea<br>Hot Ginger Lemon Tea<br>Iced Lemon Tea<br>Iced Honey Lemon<br>Iced Lychee Lemon Tea<br>Sea Salt Blue Lemonade<br>Lychee Mint Soda<br><br>Dessert:<br>1 slice of cake per person`,1.2971186735816227,103.85752559136573)">
+                    Summer Folks
+                  </a>
+                </td>
+                <td class="py-4 px-6">
+                  <span class="text-porsche-red">Free</span>
+                </td>
+              </tr>
 
-            <tr>
-              <td class="py-4 px-6">Thursday, 11th Sep</td>
-              <td class="py-4 px-6">
-                <a href="#" class="text-porsche-red hover:underline"
-                  onclick="showDetails('Umai',`Order from the regular menu<br>
+              <tr>
+                <td class="py-4 px-6">Thursday, 11th Sep</td>
+                <td class="py-4 px-6">
+                  <a href="#" class="text-porsche-red hover:underline"
+                    onclick="showDetails('Umai',`Order from the regular menu<br>
 Website: <a href='https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu.pdf?rlkey=ruzmr3iuah5zb3jife7y774t5&e=1&dl=0' target='_blank'>https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu.pdf</a>`,1.2971435986916304,103.85759234049799)">
-                  Umai
-                </a>
-              </td>
-              <td class="py-4 px-6">
-                <span class="text-porsche-red">Free</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+                    Umai
+                  </a>
+                </td>
+                <td class="py-4 px-6">
+                  <span class="text-porsche-red">Free</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </section>
 
