--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
         }
         .porsche-red { color: #D5001C; }
         .porsche-silver { color: #B0B0B0; }
+
+        /* Hero Section */
         .section-bg {
             background-image: url('https://pmepress.porsche.com/download/prod/presse_pag/PressBasicData.nsf/Download?OpenAgent&attachmentid=2897143&show=1');
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
-            height: auto;
-            min-height: 40vh;
+            background-repeat: no-repeat;
+            background-attachment: scroll; /* Wichtig für Handy */
+            min-height: 60vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 2rem 1rem;
         }
+
+        /* Modal */
         .modal {
             display: none;
             position: fixed;
@@ -49,41 +53,59 @@
             overflow-y: auto;
             border-radius: 12px;
         }
+
+        /* Karte */
         #map {
             width: 100%;
             height: 50vh;
             min-height: 300px;
         }
+
+        /* Tabelle */
         table tr:nth-child(even) { background-color: #f2f2f2; }
         table tr:hover { background-color: #e0e0e0; }
+
         .divider-stripe {
             background-color: #000000;
             height: 50px;
             width: 100%;
         }
+
         .content-container {
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             padding: 24px;
         }
+
         .map-section {
             background-color: #000000;
             padding: 24px;
             border-radius: 12px;
         }
+
         #modal-details a {
             color: #D5001C;
             text-decoration: underline;
             word-break: break-all;
             overflow-wrap: break-word;
         }
+
+        /* Mobile Anpassungen */
+        @media (max-width: 640px) {
+            .section-bg {
+                min-height: 40vh;
+                background-size: contain;
+            }
+        }
     </style>
 </head>
 <body>
     <!-- Hero Section -->
     <section class="section-bg">
-        <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-7xl font-bold text-center text-white">After Sales Conference II</h1>
+        <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-7xl font-bold text-center text-white">
+            After Sales Conference II
+        </h1>
     </section>
 
     <div class="divider-stripe"></div>
@@ -224,3 +246,4 @@ Website: <a href='https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu
     </script>
 </body>
 </html>
+
