--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #ffffff;
             color: #000000;
         }
-        .porsche-red { color: #D5001C; }
+        .porsche-red { color: rgb(1,115,121); } /* Neue Farbe */
         .porsche-silver { color: #B0B0B0; }
 
         /* Hero Section */
@@ -85,7 +85,7 @@
         }
 
         #modal-details a {
-            color: #D5001C;
+            color: rgb(1,115,121); /* Neue Farbe */
             text-decoration: underline;
             word-break: break-all;
             overflow-wrap: break-word;
@@ -246,4 +246,5 @@ Website: <a href='https://www.dropbox.com/scl/fi/so40dmdhcgc4v7dvp5sk9/Umai-Menu
     </script>
 </body>
 </html>
+
 
